# renderer

./: BUGS.txt  CMakeLists.txt  Doxyfile.in  README.txt  TODO.txt
CMakeModules/: FindPThreads.cmake
data/: Fluorescents.xls  all_1nm_data.csv  all_1nm_data.xls  ciexyz31.csv
gui/: CMakeLists.txt
gui/src/: ObjParser.cpp  ObjParser.h  RenderViewWidget.cpp  RenderViewWidget.h  StatsPanel.cpp  StatsPanel.h  gui.cpp  main_gui.cpp  moc_RenderViewWidget.cxx  moc_StatsPanel.cxx  moc_gui.cxx
hdr_shaders/: linear_hdr.frag
scripts/: .save_plot.py.swp  autogenerate_unit_test_header.py  save_plot.py  temp_file.txt
src/: .main.cpp.swo  .main.cpp.swp  Config.h  main.cpp  main_cmd_line.cpp  main_gui.cpp  main_test.cpp
src/accel/: .AccelStructure.h.swo  AccelStructure.h  BVH.cpp  BVH.h  NoAccelStructure.h  Octtree.h
src/cameras/: Camera.cpp  Camera.h
src/color/: CIEData.h  ColorConstants.h  ColorConvMat.cpp  ColorConvMat.h  ColorData.cpp  ColorData.h  ColorUtils.cpp  ColorUtils.h  DynamicSpectrum.cpp  DynamicSpectrum.h  LightData.cpp  LightData.h  NoDynSpectrum.cpp  NoDynSpectrum.h  RegularlySampledSpectrum.cpp  RegularlySampledSpectrum.h  SpectraCompare.cpp  SpectraCompare.h  SpectraGenerator.h  SpectralData.cpp  SpectralData.h  Spectrum.cpp  Spectrum.h  SpectrumPlotter.cpp  SpectrumPlotter.h
src/geom/: BoundingBox.cpp  BoundingBox.h  Ray.cpp  Ray.h  RaySurfIntersection.h
src/gui/: LayoutConstants.h  ObjParser.cpp  ObjParser.h  RenderViewWidget.cpp  StatsPanel.cpp  gui.cpp  gui.h
src/imageio/: Image.h  ImageIO.cpp  ImageIO.h  ImageTypes.h  ToneMap.cpp  ToneMap.h
src/imsampling/: BoxFilter.h  GaussianFilter.h  ImageSampler.cpp  ImageSampler.h  ImageSensor.cpp  ImageSensor.h  JitteredSampler.cpp  JitteredSampler.h  ReconstructionFilter.h  TriangleFilter.h
src/integrators/: .DirectLightIntegrator.cpp.swo  .DirectLightIntegrator.cpp.swp  .DirectLightIntegrator.h.swp  .IntegratorHelpers.cpp.swp  .IntegratorHelpers.h.swp  DirectLightIntegrator.cpp  DirectLightIntegrator.h  Integrator.h  IntegratorHelpers.cpp  IntegratorHelpers.h  IntersectionCheckIntegrator.h  PathTracingIntegrator.cpp  PathTracingIntegrator.h
src/integrators/integrators_old/: DirectLightIntegrator.cpp  DirectLightIntegrator.h  Integrator.h  IntersectionCheckIntegrator.h
src/lights/: AreaLight.h  Light.h  PointLight.h  VisibilityTester.h
src/materials/: .BRDF.h.swo  .BRDFGeom.h.swo  .LambertianBRDF.cpp.swp  .LambertianBRDF.h.swp  BRDF.h  BRDFGeom.h  LambertianBRDF.cpp  LambertianBRDF.h  Material.h  OrenNayarBRDF.cpp  OrenNayarBRDF.h  PhongMaterial.cpp  PhongMaterial.h
src/math/: Interpolate.h  Interpolation.h  IrregularlySampledFunction.cpp  IrregularlySampledFunction.h  MathUtils.h  MatrixDenseKS.h  MatrixUtils.h  Normal.cpp  Normal.h  Point.cpp  Point.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h
src/parallel/: AtomicOps.h  ProgressMeter.h  RenderTask.cpp  RenderTask.h
src/primitives/: .Shape.h.swo  .Sphere.cpp.swp  .Sphere.h.swp  Quad.cpp  Quad.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/renderers/: .Renderer.h.swp  ParallelRenderer.cpp  ParallelRenderer.h  Renderer.cpp  Renderer.h
src/scene/: .Scene.h.swo  Scene.cpp  Scene.h
src/scenegen/: SceneGen.cpp  SceneGen.h
src/test/: CustomTestReporter.h  UtilsForTesting.h
src/test/tmp/: CMFs.gnuplot  Lum_Eff.gnuplot  bb.spectrum  blackbodies.gnuplot
src/test/unit_tests/: .testBRDFGeom.h.swp  testBRDFGeom.h  testBVH.h  testBoundingBox.h  testColorUtils.h  testImageIO.h  testImageSensor.h  testIntegratorHelpers.h  testIrregularlySampledFunction.h  testJitteredSampler.h  testMatrixDenseKS.h  testMatrixUtils.h  testPoint.h  testRNG.h  testRegularlySampledSpectrum.h  testSpectraCompare.h  testSpectrum.h  testSphere.h  testStringUtils.h  testTransform.h  testVector.h  tests_auto_generated.h
src/utils/: .Constants.h.swo  .Constants.h.swp  Assert.h  Bits.h  Constants.h  GeomUtils.h  RNG.cpp  RNG.h  RNGs.cpp  RNGs.h  StringUtils.cpp  StringUtils.h  Timer.h  mtrand.cpp
test/: test.cpp  testBRDFGeom.h  testBoundingBox.h  testColorUtils.h  testImageSensor.h  testJitteredSampler.h  testMatrixDenseKS.h  testMatrixUtils.h  testPoint.h  testRNG.h  testSpectraCompare.h  testSpectrum.h  testSphere.h  testStringUtils.h  testTransform.h  testVector.h
